--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.irenical.thrifty</groupId>
   <artifactId>thrifty</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.10</version>
 
   <packaging>jar</packaging>
 
@@ -32,12 +32,19 @@
     <dependency>
       <groupId>org.irenical.jindy</groupId>
       <artifactId>jindy-api</artifactId>
-      <version>1.4.2</version>
+      <version>1.5.0</version>
     </dependency>
     <dependency>
       <groupId>org.irenical.lifecycle</groupId>
       <artifactId>lifecycle</artifactId>
       <version>1.0.2</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.irenical.jindy</groupId>
+      <artifactId>jindy-commons-impl</artifactId>
+      <version>1.5.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
