--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.irenical.thrifty</groupId>
   <artifactId>thrifty</artifactId>
-  <version>1.0.10</version>
+  <version>1.0.11</version>
 
   <packaging>jar</packaging>
 
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>org.irenical.jindy</groupId>
       <artifactId>jindy-api</artifactId>
-      <version>1.5.0</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.irenical.lifecycle</groupId>
@@ -66,8 +66,8 @@
 
     <dependency>
       <groupId>org.irenical.jindy</groupId>
-      <artifactId>jindy-commons-impl</artifactId>
-      <version>1.5.0</version>
+      <artifactId>jindy-apacheconfig-impl</artifactId>
+      <version>2.1.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
