--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.irenical.maven</groupId>
     <artifactId>parent-root</artifactId>
-    <version>1.8.2</version>
+    <version>1.8.5</version>
   </parent>
 
   <groupId>org.irenical.thrifty</groupId>
@@ -28,7 +28,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.6.201602180812</version>
+        <version>0.7.9</version>
         <executions>
           <execution>
             <goals>
@@ -51,23 +51,28 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>0.9.3</version>
+      <version>0.10.0</version>
     </dependency>
     <dependency>
       <groupId>org.irenical.jindy</groupId>
       <artifactId>jindy-api</artifactId>
-      <version>2.1.0</version>
+      <version>3.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.irenical.lifecycle</groupId>
       <artifactId>lifecycle</artifactId>
       <version>1.0.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.irenical.jindy</groupId>
       <artifactId>jindy-apacheconfig-impl</artifactId>
-      <version>2.1.0</version>
+      <version>3.0.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
