--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -10,7 +9,7 @@
 
   <groupId>org.irenical.thrifty</groupId>
   <artifactId>thrifty</artifactId>
-  <version>1.0.12-SNAPSHOT</version>
+  <version>1.0.12</version>
 
   <packaging>jar</packaging>
 
@@ -21,6 +20,7 @@
     <connection>scm:git:git@github.com:irenical/thrifty.git</connection>
     <developerConnection>scm:git:git@github.com:irenical/thrifty.git</developerConnection>
     <url>git@github.com:irenical/thrifty.git</url>
+    <tag>thrifty-1.0.12</tag>
   </scm>
 
   <build>
