--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.irenical.thrifty</groupId>
   <artifactId>thrifty</artifactId>
-  <version>1.0.12</version>
+  <version>1.0.13-SNAPSHOT</version>
 
   <packaging>jar</packaging>
 
@@ -20,7 +20,7 @@
     <connection>scm:git:git@github.com:irenical/thrifty.git</connection>
     <developerConnection>scm:git:git@github.com:irenical/thrifty.git</developerConnection>
     <url>git@github.com:irenical/thrifty.git</url>
-    <tag>thrifty-1.0.12</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
